--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: BanTerrorist
 main: Mohi\BanTerrorist\BanTerroristMain
-version: "1.0"
-author: "Mohi(물외한인)"
+version: "2.0"
+author: "물외한인(Mohi)"
 api:
 - 1.12.0
 - 1.13.0
